Update spark-discussions.md