@@ -5,3 +5,9 @@
 ### spark dataframe intro 
 
 * https://github.com/yu-iskw/spark-dataframe-introduction/blob/master/doc/dataframe-introduction.md
+
+### notes for building spark
+
+* 将IDEA的setting中的maven修改为3.3.9
+
+* 在IDEA的maven的setting里面的importer和runner加上vm设置：-Xmx2g -XX:MaxPermSize=2024M
